--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@angular/common": "~11.1.2",
     "@angular/compiler": "~11.1.2",
     "@angular/core": "~11.1.2",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.1.2",
     "@angular/material": "^11.2.0",
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "firebase": "^8.7.1",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
