--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "@angular-devkit/architect": ">= 0.900 < 0.1300",
     "@angular-devkit/build-angular": "~12.1.2",
-    "@angular/cli": "~12.1.2",
+    "@angular/cli": "^12.1.4",
     "@angular/compiler-cli": "~12.1.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
